; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_lib1591.c_trailers_callback.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_lib1591.c_trailers_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"my-super-awesome-trailer: trail1\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"my-other-awesome-trailer: trail2\00", align 1
@CURL_TRAILERFUNC_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.curl_slist**, i8*)* @trailers_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trailers_callback(%struct.curl_slist** %0, i8* %1) #0 {
  %3 = alloca %struct.curl_slist**, align 8
  %4 = alloca i8*, align 8
  store %struct.curl_slist** %0, %struct.curl_slist*** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.curl_slist**, %struct.curl_slist*** %3, align 8
  %7 = load %struct.curl_slist*, %struct.curl_slist** %6, align 8
  %8 = call %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %7, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.curl_slist**, %struct.curl_slist*** %3, align 8
  store %struct.curl_slist* %8, %struct.curl_slist** %9, align 8
  %10 = load %struct.curl_slist**, %struct.curl_slist*** %3, align 8
  %11 = load %struct.curl_slist*, %struct.curl_slist** %10, align 8
  %12 = call %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %11, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %13 = load %struct.curl_slist**, %struct.curl_slist*** %3, align 8
  store %struct.curl_slist* %12, %struct.curl_slist** %13, align 8
  %14 = load i32, i32* @CURL_TRAILERFUNC_OK, align 4
  ret i32 %14
}

declare dso_local %struct.curl_slist* @curl_slist_append(%struct.curl_slist*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
